--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ jobs:
       - name: Test ssh connection
         run: |
             echo "This is a test"
+            echo $(ls -la ~/.ssh)
             echo ${{ secrets.USERNAME }}
             echo ${{ secrets.HOST }}
             ssh -i ${{ secrets.PRIVATE_KEY }} sofien@70.71.38.86 -v
