--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,22 @@
 name: Deploy Demo App To My Kubernetes Homelab
-on: [push]
+on:
+  push:
+    branches:
+      - main
 jobs:
   Test-SSH:
     runs-on: ubuntu-latest
     steps:
-      - name: Test ssh connection
+      - name: Install SSH client
+        run: sudo apt-get install -y openssh-client
+
+      - name: Add SSH private key to agent
         run: |
-            echo "This is a test"
-            echo $(ls -la ~/.ssh)
-            echo ${{ secrets.USERNAME }}
-            echo ${{ secrets.HOST }}
-            ssh -i ${{ secrets.PRIVATE_KEY }} sofien@70.71.38.86 -v
+          mkdir -p ~/.ssh
+          echo ${{ secrets.PRIVATE_KEY }} > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
 
-
+      - name: Deploy to server
+        run: |
+          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} -v "ls -la"
