--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,11 @@ jobs:
           mkdir -p ~/.ssh
           echo ${{ secrets.PRIVATE_KEY }} > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.REMOTE_SERVER }} -v
-          ssh-keyscan -H ${{ secrets.REMOTE_SERVER }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H 70.71.50.252  >> ~/.ssh/known_hosts
 
       - name: Deploy to server
         run: |
           ssh ${{ secrets.USERNAME }}@${{ secrets.REMOTE_SERVER }} -v "ls -la"
+
+
+          ssh-keyscan -H 70.71.50.252
