--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Add SSH private key to agent
         run: |
           mkdir -p ~/.ssh
-          echo ${{ secrets.PRIVATE_KEY }} > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+          echo ${{ secrets.PRIVATE_KEY }} > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan -H 70.71.50.252  >> ~/.ssh/known_hosts
 
       # - name: Setup upterm session
