--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,22 +10,25 @@ jobs:
       - name: Install SSH client
         run: sudo apt-get install -y openssh-client
 
-      - name: Configure SSH
-        uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: ${{ secrets.PRIVATE_KEY }}
+      # - name: Configure SSH
+      #   uses: webfactory/ssh-agent@v0.9.0
+      #   with:
+      #     ssh-private-key: ${{ secrets.PRIVATE_KEY }}
 
-      # - name: Add SSH private key to agent
-      #   run: |
-      #     mkdir -p ~/.ssh
-      #     # echo ${{ secrets.PRIVATE_KEY }} > ~/.ssh/id_ed25519
-      #     echo "{{ secrets.PRIVATE_KEY }}" > ~/.ssh/id_ed25519
-      #     chmod 600 ~/.ssh/id_ed25519
-      #     ssh-keyscan -H 70.71.50.252  >> ~/.ssh/known_hosts
-      #     chmod 600 ~/.ssh/known_hosts
-      #     cat ~/.ssh/id_ed25519
-      #     eval "$(ssh-agent -s)"
-      #     ssh-add ~/.ssh/id_ed25519
+      - name: Add SSH private key to agent
+        env:
+          SUPER_SECRET: ${{ secrets.USERNAME }}
+        run: |
+          mkdir -p ~/.ssh
+          # echo ${{ secrets.PRIVATE_KEY }} > ~/.ssh/id_ed25519
+          echo "{{ secrets.PRIVATE_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan -H 70.71.50.252  >> ~/.ssh/known_hosts
+          chmod 600 ~/.ssh/known_hosts
+          echo $USERNAME
+          cat ~/.ssh/id_ed25519
+          eval "$(ssh-agent -s)"
+          ssh-add ~/.ssh/id_ed25519
 
       # - name: Setup upterm session
       #   uses: lhotari/action-upterm@v1
