--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,4 +42,5 @@ jobs:
           ssh-keyscan -H 70.71.50.252  >> ~/.ssh/known_hosts
           chmod 600 ~/.ssh/known_hosts
           ls -al ~/.ssh/
+          cat  /etc/ssh/ssh_config
           ssh devops@70.71.50.252 -v "ls -la"
