--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
           chmod 600 ~/.ssh/known_hosts
           echo $USERNAME
           echo $SUPER_SECRET
+          echo "Debug"
           cat ~/.ssh/id_ed25519
 
       - name: Deploy to server
