--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,9 @@ jobs:
           echo "Debug"
           cat ~/.ssh/id_ed25519
 
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+
       - name: Deploy to server
         run: |
           ssh-keyscan -H 70.71.50.252  >> ~/.ssh/known_hosts
