--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,44 +1,29 @@
-name: Deploy Demo App To My Kubernetes Homelab
-on:
-  push:
-    branches:
-      - master
+name: Build and Push Docker Image to Docker Hub
+
+on: push
 jobs:
-  Test-SSH:
+  push_to_registry:
+    name: push docker image to hub
     runs-on: ubuntu-latest
     steps:
-      - name: Install SSH client
-        run: sudo apt-get install -y openssh-client
+      - name: check repository
+        uses: actions/checkout@v4
+      
+      - name: Configure SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.PRIVATE_KEY }}
 
-      # - name: Configure SSH 
-      #   uses: webfactory/ssh-agent@v0.9.0
+      # - name: login to docker registry
+      #   uses: docker/login-action@v3
       #   with:
-      #     ssh-private-key: ${{ secrets.PRIVATE_KEY }}
+      #     username: ${{secrets.DOCKERHUB_USERNAME}}
+      #     password: ${{secrets.DOCKERHUB_TOKEN}}
 
-      - name: Add SSH private key to agent
-        env:
-          SUPER_SECRET: ${{ secrets.SUPER_SECRET }}
-          USERNAME: ${{ secrets.USERNAME }}
-          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-        run: |
-          mkdir -p ~/.ssh
-          echo $PRIVATE_KEY > ~/.ssh/id_ed25519
-          echo "\n" >> ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan -H 70.71.50.252  >> ~/.ssh/known_hosts
-          chmod 600 ~/.ssh/known_hosts
-          echo $USERNAME
-          echo $SUPER_SECRET
-          echo "Debug"
-          cat ~/.ssh/id_ed25519
-
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
-
-      - name: Deploy to server
-        run: |
-          ssh-keyscan -H 70.71.50.252  >> ~/.ssh/known_hosts
-          chmod 600 ~/.ssh/known_hosts
-          ls -al ~/.ssh/
-          cat  ~/.ssh/id_ed25519
-          ssh devops@70.71.50.252 -v "ls -la"
+      # - name: build and push docker image to registry
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: .
+      #     file: ./Dockerfile
+      #     push: true
+      #     tags: sofiencloud/sofien:latest
