--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,9 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 8080:80
+      - 3000:3000
     volumes:
       - /run/host-services/ssh-auth.sock:/run/host-services/ssh-auth.sock
+      - ./:/usr/src/app
     environment:
       - SSH_AUTH_SOCK=/var/run/docker.sock:/var/run/docker.sock
