--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    # tty: truel
+    # command: bash -c "ls -a  &&  go run main.go"
     ports:
-      - 3000:3000
+      - 8080:8080
     volumes:
       - /run/host-services/ssh-auth.sock:/run/host-services/ssh-auth.sock
+      - ~/.ssh/id_ed25519:/root/.ssh/id_ed25519
+      - ~/.ssh/id_ed25519.pub:/root/.ssh/id_ed25519.pub
       - ./:/app
-      - /app/node_modules
     environment:
       - SSH_AUTH_SOCK=/var/run/docker.sock:/var/run/docker.sock
