--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,22 +8,17 @@ jobs:
     steps:
       - name: check repository
         uses: actions/checkout@v4
-      
-      - name: Configure SSH
-        uses: webfactory/ssh-agent@v0.9.0
+
+      - name: login to docker registry
+        uses: docker/login-action@v3
         with:
-          ssh-private-key: ${{ secrets.PRIVATE_KEY }}
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_TOKEN}}
 
-      # - name: login to docker registry
-      #   uses: docker/login-action@v3
-      #   with:
-      #     username: ${{secrets.DOCKERHUB_USERNAME}}
-      #     password: ${{secrets.DOCKERHUB_TOKEN}}
-
-      # - name: build and push docker image to registry
-      #   uses: docker/build-push-action@v5
-      #   with:
-      #     context: .
-      #     file: ./Dockerfile
-      #     push: true
-      #     tags: sofiencloud/sofien:latest
+      - name: build and push docker image to registry
+        uses: docker/build-push-action@v5
+        with:
+          context: ./sofien
+          file: ./sofien/Dockerfile
+          push: true
+          tags: sofiencloud/home-lab-deployer:latest
