--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       - name: build and push docker image to registry
         uses: docker/build-push-action@v5
         with:
-          context: ./sofien
-          file: ./sofien/Dockerfile
+          context: ./
+          file: ./Dockerfile
           push: true
           tags: sofiencloud/home-lab-deployer:latest
