--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,16 +9,29 @@ jobs:
       - name: check repository
         uses: actions/checkout@v4
 
-      - name: login to docker registry
-        uses: docker/login-action@v3
+      - name: Install SSH Key
+        uses: shimataro/ssh-key-action@v2
         with:
-          username: ${{secrets.DOCKER_USERNAME}}
-          password: ${{secrets.DOCKER_TOKEN}}
+          key: ${{ secrets.SSH_PRIVATE_KEY }} 
+          known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+          
+      - name: Adding Known Hosts
+        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
-      - name: build and push docker image to registry
-        uses: docker/build-push-action@v5
-        with:
-          context: ./
-          file: ./Dockerfile
-          push: true
-          tags: sofiencloud/home-lab-deployer:latest
+      - name: Debug SSH
+        run: |
+          ssh -vvv sofien@${{ secrets.SSH_HOST }}
+
+      # - name: login to docker registry
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{secrets.DOCKER_USERNAME}}
+      #     password: ${{secrets.DOCKER_TOKEN}}
+
+      # - name: build and push docker image to registry
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: ./
+      #     file: ./Dockerfile
+      #     push: true
+      #     tags: sofiencloud/home-lab-deployer:latest
