--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,18 +9,12 @@ jobs:
       - name: check repository
         uses: actions/checkout@v4
 
-      - name: Install SSH Key
-        uses: shimataro/ssh-key-action@v2
+      - name: Deploy to homelab
+        uses: sofiengwin/hld-github-actions/.github/workflows/deploy.yml
         with:
-          key: ${{ secrets.SSH_PRIVATE_KEY }} 
-          known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
-          
-      - name: Adding Known Hosts
-        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-
-      - name: Debug SSH
-        run: |
-          ssh -vvv sofien@${{ secrets.SSH_HOST }} ls -la
+          ssh-user: sofien
+          ssh-host: ${{ secrets.SSH_HOST }}
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       # - name: login to docker registry
       #   uses: docker/login-action@v3
