--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy to homelab
-        uses: https://github.com/sofiengwin/hld-github-actions/.github/workflows/deploy.yml
+        uses: sofiengwin/homelab-demo-deploy/.github/workflows/deploy.yml
         with:
           ssh-user: sofien
           ssh-host: ${{ secrets.SSH_HOST }}
