--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,13 @@ jobs:
       - name: check repository
         uses: actions/checkout@v4
 
+      - name: Deploy to homelab
+        uses: sofiengwin/hld-github-actions/.github/workflows/deploy.yml@master
+        with:
+          ssh-user: sofien
+          ssh-host: ${{ secrets.SSH_HOST }}
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
       # - name: login to docker registry
       #   uses: docker/login-action@v3
       #   with:
@@ -22,13 +29,7 @@ jobs:
       #     file: ./Dockerfile
       #     push: true
       #     tags: sofiencloud/home-lab-deployer:latest
-  my-job:
-    uses: sofiengwin/hld-github-actions/.github/workflows/deploy.yml@master
-    with:
-      ssh-user: sofien
-      ssh-host: ${{ secrets.SSH_HOST }}
-      ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
+        
 
 
 
