--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,19 @@ jobs:
     steps:
       - name: check repository
         uses: actions/checkout@v4
+      - name: Install SSH Key
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.SSH_PRIVATE_KEY }} 
+          known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+          
+      - name: Adding Known Hosts
+        run: ssh-keyscan -H ${{  secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+
+
+      - name: Debug SSH
+        run: |
+          ssh -vvv sofien@${{  secrets.SSH_HOST }} ls -la
      
   deploy:
     uses: sofiengwin/hld-github-actions/.github/workflows/deploy.yml@master
