--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,20 +15,20 @@ jobs:
           known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
           
       - name: Adding Known Hosts
-        run: ssh-keyscan -H ${{  secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+        run: ssh-keyscan -H 70.70.238.249 >> ~/.ssh/known_hosts
 
 
       - name: Debug SSH
         run: |
           ssh -vvv sofien@${{  secrets.SSH_HOST }} ls -la
      
-  deploy:
-    uses: sofiengwin/hld-github-actions/.github/workflows/deploy.yml@master
-    with:
-      ssh-user: sofien
-    secrets:
-      SSH_HOST: ${{ secrets.SSH_HOST }}
-      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+  # deploy:
+  #   uses: sofiengwin/hld-github-actions/.github/workflows/deploy.yml@master
+  #   with:
+  #     ssh-user: sofien
+  #   secrets:
+  #     SSH_HOST: ${{ secrets.SSH_HOST }}
+  #     SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
       # - name: login to docker registry
       #   uses: docker/login-action@v3
