--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
           known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
 
       - name: Setup SSH debug session
-        uses: lhotari/action-upterm@v1
+        uses: csexton/debugger-action@master
           
       - name: Adding Known Hosts
         run: ssh-keyscan -v -H 70.70.238.249 >> ~/.ssh/known_hosts
