remove debug step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,8 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }} 
           known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
 
-      - name: Setup SSH debug session
-        uses: csexton/debugger-action@master
+      # - name: Setup SSH debug session
+      #   uses: csexton/debugger-action@master
           
       - name: Adding Known Hosts
         run: ssh-keyscan -v -H 70.70.238.249 >> ~/.ssh/known_hosts
