--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,30 +8,30 @@ jobs:
     steps:
       - name: check repository
         uses: actions/checkout@v4
-      - name: Install SSH Key
-        uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.SSH_PRIVATE_KEY }} 
-          known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+      # - name: Install SSH Key
+      #   uses: shimataro/ssh-key-action@v2
+      #   with:
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }} 
+      #     known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
 
-      # - name: Setup SSH debug session
-      #   uses: csexton/debugger-action@master
+      # # - name: Setup SSH debug session
+      # #   uses: csexton/debugger-action@master
           
-      - name: Adding Known Hosts
-        run: ssh-keyscan -v -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+      # - name: Adding Known Hosts
+      #   run: ssh-keyscan -v -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
 
-      - name: Debug SSH
-        run: |
-          ssh -vvv sofien@${{  secrets.SSH_HOST }} ls -la
+      # - name: Debug SSH
+      #   run: |
+      #     ssh -vvv sofien@${{  secrets.SSH_HOST }} ls -la
      
-  # deploy:
-  #   uses: sofiengwin/hld-github-actions/.github/workflows/deploy.yml@master
-  #   with:
-  #     ssh-user: sofien
-  #   secrets:
-  #     SSH_HOST: ${{ secrets.SSH_HOST }}
-  #     SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+  deploy:
+    uses: sofiengwin/hld-github-actions/.github/workflows/deploy.yml@master
+    with:
+      ssh-user: sofien
+    secrets:
+      SSH_HOST: ${{ secrets.SSH_HOST }}
+      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
       # - name: login to docker registry
       #   uses: docker/login-action@v3
