--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,22 +8,21 @@ jobs:
     steps:
       - name: check repository
         uses: actions/checkout@v4
-      # - name: Install SSH Key
-      #   uses: shimataro/ssh-key-action@v2
-      #   with:
-      #     key: ${{ secrets.SSH_PRIVATE_KEY }} 
-      #     known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+      
+      - name: login to docker registry
+        uses: docker/login-action@v3
+        with:
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_TOKEN}}
 
-      # # - name: Setup SSH debug session
-      # #   uses: csexton/debugger-action@master
-          
-      # - name: Adding Known Hosts
-      #   run: ssh-keyscan -v -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+      - name: build and push docker image to registry
+        uses: docker/build-push-action@v5
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: sofiencloud/home-lab-deployer:latest
 
-
-      # - name: Debug SSH
-      #   run: |
-      #     ssh -vvv sofien@${{  secrets.SSH_HOST }} ls -la
      
   deploy:
     uses: sofiengwin/hld-github-actions/.github/workflows/deploy.yml@master
@@ -32,20 +31,6 @@ jobs:
     secrets:
       SSH_HOST: ${{ secrets.SSH_HOST }}
       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      # - name: login to docker registry
-      #   uses: docker/login-action@v3
-      #   with:
-      #     username: ${{secrets.DOCKER_USERNAME}}
-      #     password: ${{secrets.DOCKER_TOKEN}}
-
-      # - name: build and push docker image to registry
-      #   uses: docker/build-push-action@v5
-      #   with:
-      #     context: ./
-      #     file: ./Dockerfile
-      #     push: true
-      #     tags: sofiencloud/home-lab-deployer:latest
         
 
 
