--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,19 +9,19 @@ jobs:
       - name: check repository
         uses: actions/checkout@v4
       
-      - name: login to docker registry
-        uses: docker/login-action@v3
-        with:
-          username: ${{secrets.DOCKER_USERNAME}}
-          password: ${{secrets.DOCKER_TOKEN}}
+      # - name: login to docker registry
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{secrets.DOCKER_USERNAME}}
+      #     password: ${{secrets.DOCKER_TOKEN}}
 
-      - name: build and push docker image to registry
-        uses: docker/build-push-action@v5
-        with:
-          context: ./
-          file: ./Dockerfile
-          push: true
-          tags: sofiencloud/home-lab-deployer:latest
+      # - name: build and push docker image to registry
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: ./
+      #     file: ./Dockerfile
+      #     push: true
+      #     tags: sofiencloud/home-lab-deployer:latest
 
      
   deploy:
